Use Records instead of Lombok @Data for Captcha classes